sudah buat kodingnya

--- a/APPcekKursMataUang/src/appcekkursmatauang/FrameUtama.form
+++ b/APPcekKursMataUang/src/appcekkursmatauang/FrameUtama.form
@@ -63,7 +63,7 @@
                           <Component id="jButton1" min="-2" pref="145" max="-2" attributes="0"/>
                           <Group type="102" attributes="0">
                               <EmptySpace min="10" pref="10" max="-2" attributes="0"/>
-                              <Component id="jTextField1" min="-2" pref="125" max="-2" attributes="0"/>
+                              <Component id="tnilai" min="-2" pref="125" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -73,7 +73,7 @@
                       <EmptySpace min="-2" pref="44" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace pref="137" max="32767" attributes="0"/>
+              <EmptySpace pref="121" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -95,7 +95,7 @@
               <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
               <Component id="jButton1" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Component id="jTextField1" min="-2" pref="38" max="-2" attributes="0"/>
+              <Component id="tnilai" min="-2" pref="38" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="96" max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -106,8 +106,8 @@
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="2">
-            <StringItem index="0" value="USD"/>
-            <StringItem index="1" value="IDR"/>
+            <StringItem index="0" value="IDR"/>
+            <StringItem index="1" value="USD"/>
           </StringArray>
         </Property>
       </Properties>
@@ -121,7 +121,13 @@
     <Component class="javax.swing.JComboBox" name="combo2">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="0"/>
+          <StringArray count="5">
+            <StringItem index="0" value="CAD"/>
+            <StringItem index="1" value="HDK"/>
+            <StringItem index="2" value="USD"/>
+            <StringItem index="3" value="SGD"/>
+            <StringItem index="4" value="AUD"/>
+          </StringArray>
         </Property>
       </Properties>
       <AuxValues>
@@ -142,8 +148,11 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="CEK KURS SAAT INI "/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+      </Events>
     </Component>
-    <Component class="javax.swing.JTextField" name="jTextField1">
+    <Component class="javax.swing.JTextField" name="tnilai">
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel3">
       <Properties>
