buat file jar dan finishing

--- a/APPcekKursMataUang/src/appcekkursmatauang/FrameUtama.form
+++ b/APPcekKursMataUang/src/appcekkursmatauang/FrameUtama.form
@@ -123,7 +123,7 @@
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="5">
             <StringItem index="0" value="CAD"/>
-            <StringItem index="1" value="HDK"/>
+            <StringItem index="1" value="HKD"/>
             <StringItem index="2" value="USD"/>
             <StringItem index="3" value="SGD"/>
             <StringItem index="4" value="AUD"/>
